Bug 434981 - The effect sliders are not adjusted for RTL
Summary: The effect sliders are not adjusted for RTL
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords: rtl
Depends on:
Blocks:
 
Reported: 2021-03-26 15:08 UTC by Omeritzics
Modified: 2021-08-01 13:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Bug reproduce video (2.82 MB, video/webm)
2021-03-26 15:08 UTC, Omeritzics
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Omeritzics 2021-03-26 15:08:10 UTC
Created attachment 137088 [details]
Bug reproduce video

SUMMARY
The effect sliders are not adjusted for RTL.

STEPS TO REPRODUCE
1. Use Kdenlive in a RTL language (Hebrew, Arabic, Persian, etc.)
2. Add a video, and an effect (for example: Crop, Scale and Tilt) for the video.
3. Try to use the sliders to adjust the effect. Then, you will experience this problem.

OBSERVED RESULT
The effect sliders are not adjusted for RTL.

EXPECTED RESULT
The effect sliders are adjusted for RTL.
Comment 1 Julius Künzel 2021-05-17 16:22:04 UTC
Git commit 06a5cb12d557b1b22d854aea6365847165a37c88 by Julius Künzel.
Committed on 17/05/2021 at 16:21.
Pushed by jlskuz into branch 'release/21.04'.

Fix effect sliders on right to left (rtl) layouts

M  +14   -3    src/widgets/dragvalue.cpp

https://invent.kde.org/multimedia/kdenlive/commit/06a5cb12d557b1b22d854aea6365847165a37c88
Comment 2 Omeritzics 2021-05-18 11:17:34 UTC
(In reply to Julius Künzel from comment #1)
> Git commit 06a5cb12d557b1b22d854aea6365847165a37c88 by Julius Künzel.
> Committed on 17/05/2021 at 16:21.
> Pushed by jlskuz into branch 'release/21.04'.
> 
> Fix effect sliders on right to left (rtl) layouts
> 
> M  +14   -3    src/widgets/dragvalue.cpp
> 
> https://invent.kde.org/multimedia/kdenlive/commit/
> 06a5cb12d557b1b22d854aea6365847165a37c88

Thank you, but this is not fixed.
Comment 3 Julius Künzel 2021-07-02 08:41:13 UTC
Thanks for your reaction. I tested it on a rtl system and my fix works…
How have you tested it? You need to use the latest nightly version or at least version 21.04.2 Can you please test again and give us feedback?
Comment 4 Bug Janitor Service 2021-07-17 04:33:39 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Bug Janitor Service 2021-08-01 04:33:35 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 6 Omeritzics 2021-08-01 13:29:45 UTC
(In reply to Julius Künzel from comment #3)
> Thanks for your reaction. I tested it on a rtl system and my fix works…
> How have you tested it? You need to use the latest nightly version or at
> least version 21.04.2 Can you please test again and give us feedback?

Yes, it works, thank you. And I'm very sorry for the late response.