Fix effect sliders on right to left (rtl) layouts

BUG: 434981